--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     
-    background: rgba(209, 61, 61, 0.815);
+    background: rgba(71, 70, 70, 0.801);
     background-attachment: fixed;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -18,19 +18,19 @@ body{
 
 }
 #year{
-    background: rgb(248, 59, 59);
+    background: rgb(231, 145, 46);
     padding: 40px;
 }
 
 #driver{
-    background: rgba(153, 65, 65, 0.726);
+    background: rgba(172, 53, 53, 0.726);
     padding: 40px;
 }
 
 
 
 #team{
-    background: yellow;
+    background: rgb(156, 156, 44);
     padding: 40px;
 }
 
@@ -49,6 +49,7 @@ body{
     padding-right: 15.15%;
     padding-top: 20px;
     padding-bottom: 20px;
+    font-weight: 800;
 }
 .tab.active {
     background-color: #CCC;
@@ -89,3 +90,28 @@ h1.hello{
 }
 
 .RaceList{ cursor: pointer; }
+
+
+#eachDriver{
+    text-align: center;
+    outline-color: black;
+    outline-width: 1px;
+    /* border-bottom-style: solid */
+}
+
+#eachRace{
+    text-align: center;
+}
+
+/* #season-form{
+
+
+
+}     */
+select {
+        width: 50%;
+        padding: 5px 5px;
+        border: none;
+        border-radius: 4px;
+        background-color: #f1f1f1;
+}
