--- a/style.css
+++ b/style.css
@@ -103,11 +103,11 @@ h1.hello{
     text-align: center;
 }
 
-/* #season-form{
-
-
-
-}     */
+#yearSelector{
+    background-color: rgb(206, 128, 38);
+    padding: 30px;
+    border-style: solid;
+}
 select {
         width: 50%;
         padding: 5px 5px;
